--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Chat App</string>
+    <string name="app_name">Chatterly</string>
     <string name="name">Name</string>
     <string name="this_is_sent_message">This is sent Message</string>
     <string name="this_is_received_message">this_is_received_message</string>
